--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {"node": "14.21.3"},
   "browserslist": [
     ">0.2%",
     "not dead",
